# book

./: .gitignore  README.md  myst.yml  pyproject.toml
book/: AI_coding_assistants.md  data_management.md  essential_tools_and_techniques.md  extras.md  project_organization.md  references.bib  testing.md  workflows.md
